solve all changes